--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,7 +12,7 @@
     <strong>{{ name }}</strong><br/>
 </div>
 <div>
-    <a href="/rango">Index</a><br/>
+    <a href="{% url 'rango:index' %}">Index</a><br/>
     <img src="{{ MEDIA_URL }}rango/elephant.jpg" alt="Picture of Elephant" >
 </div>
 </body>
