[ADD]complete chapter 7

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -39,6 +39,7 @@
 
 <div>
     <a href="{% url 'rango:about' %}">About</a><br/>
+    <a href="{% url 'rango:add_category' %}">Add a Category</a><br/>
     <img src="{% static 'images/wallpaper.jpg' %}" alt="Picture of Wallpaper">
 </div>
 </body>
