--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -23,6 +23,7 @@
 </div>
 <div>
     <a href="{% url 'rango:index' %}">Index</a><br/>
+    <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a><br/>
     <img src="{{ MEDIA_URL }}rango/elephant.jpg" alt="Picture of Elephant" >
 </div>
 
